2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/57_while_avec_int.deca
// Description :
//     test sur while avec int   
// Resultats :
//    Erreur Contexteulle ligne 11 : le type attendu est boolean
//
// Historique :
// cree le 01/01/2024

{
    

    while(1)
    {
        
    }
}